--- a/db/SurroundSound.lpc.html
+++ b/db/SurroundSound.lpc.html
@@ -15,4 +15,36 @@
 <TH>Input only Bidir</TH>
 <TH>Output only Bidir</TH>
 </TR>
+<TR >
+<TD >FMem</TD>
+<TD >0</TD>
+<TD >196608</TD>
+<TD >0</TD>
+<TD >196608</TD>
+<TD >196608</TD>
+<TD >196608</TD>
+<TD >196608</TD>
+<TD >196608</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
+<TR >
+<TD >BC</TD>
+<TD >6</TD>
+<TD >9</TD>
+<TD >0</TD>
+<TD >9</TD>
+<TD >8</TD>
+<TD >9</TD>
+<TD >9</TD>
+<TD >9</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+<TD >0</TD>
+</TR>
 </TABLE>
